added viewing campaigns

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,14 +7,12 @@
 <body>
 <ul>
     <li>
-        <a href="/add_campaign">add</a>
+        <a href="/add_campaign">add new campaign</a>
     </li>
     <li>
-        <a href="delete_campaign.html">delete</a>
+        <a href="/campaigns/view">show all campaigns</a>
     </li>
-    <li>
-        <a href="modify_campaign.html">modify</a>
-    </li>
+
 </ul>
 </body>
 </html>
