--- a/src/main/resources/templates/add_campaign.html
+++ b/src/main/resources/templates/add_campaign.html
@@ -5,7 +5,8 @@
     <title>Add campaign</title>
 </head>
 <body>
-<h3>current balance</h3>
+<h3>Current Balance:</h3>
+<h3 th:text="${balance}"></h3>
 <br>
 <form action="" method="post">
   Campaign name:<input type="text" name="name"/>
