--- a/src/main/resources/templates/add_campaign.html
+++ b/src/main/resources/templates/add_campaign.html
@@ -5,6 +5,8 @@
     <title>Add campaign</title>
 </head>
 <body>
+<a href="/">homepage</a>
+<br>
 <h3>Current Balance:</h3>
 <h3 th:text="${balance}"></h3>
 <br>
