--- a/src/main/resources/templates/add_campaign.html
+++ b/src/main/resources/templates/add_campaign.html
@@ -13,7 +13,13 @@
 <form action="" method="post">
   Campaign name:<input type="text" name="name"/>
   <br>
-  Keywords:<input type="text" name="keywords"/>
+  Keywords:
+  <br>
+  <select name="keywords" multiple="multiple">
+    <option th:each="keyword : ${keywords}"
+            th:value="${keyword}"
+            th:text="${keyword}"></option>
+  </select>
   <br>
   Bid amount:<input type="number" name="bid" min="100"/>
   <br>
