--- a/src/main/resources/templates/edit_campaign.html
+++ b/src/main/resources/templates/edit_campaign.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+<link rel="stylesheet" th:href="@{/css/style.css}">
 <head>
   <meta charset="UTF-8">
-  <title>Add campaign</title>
+  <title>Edit campaign</title>
 </head>
 <body>
 <a href="/">homepage</a>
@@ -11,13 +12,13 @@
 <h3 th:text="${balance}"></h3>
 <br>
 <form action="" method="post">
-  Campaign name:<input type="text" name="name" th:value="${campaign.name}"/>
+  Campaign name: <input type="text" name="name" th:value="${campaign.name}"/>
   <br>
-  Keywords:<input type="text" name="keywords" th:value="${campaign.keywords}"/>
+  Keywords: <input type="text" name="keywords" th:value="${campaign.keywords}"/>
   <br>
-  Bid amount:<input type="number" name="bid" min="100" th:value="${campaign.bid}"/>
+  Bid amount: <input type="number" name="bid" min="100" th:value="${campaign.bid}"/>
   <br>
-  Campaign fund:<input type="number" name="fund" th:value="${campaign.fund}"/>
+  Campaign fund: <input type="number" name="fund" th:value="${campaign.fund}"/>
   <br>
   Status:
   <select name="status">
@@ -37,7 +38,7 @@
     </option>
   </select>
   <br>
-  Radius:<input type="number" name="radius" th:value="${campaign.radius}"/>km
+  Radius: <input type="number" name="radius" th:value="${campaign.radius}"/>km
   <br>
   <input type="submit" value="update campaign info"/>
 </form>
